--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,12 @@ error = "0.1.9"
 futures-util = "0.3.30"
 serde_json = "1.0.128"
 serde = { version = "1.0.210", features = ["derive"] }
+wayland-protocols = "0.32.4"
+wayland-server = "0.31.5"
+drm-fourcc = "2.2.0"
+once_cell = "1.20.0"
+lazy_static = "1.5.0"
+libc = "0.2.158"
 
 [dependencies.smithay]
 default-features = false
