--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,6 +37,7 @@ drm-fourcc = "2.2.0"
 once_cell = "1.20.0"
 lazy_static = "1.5.0"
 libc = "0.2.158"
+home = "0.5.9"
 
 [dependencies.smithay]
 default-features = false
